--- a/sesion09selenium.adoc
+++ b/sesion09selenium.adoc
@@ -184,13 +184,100 @@ Para ello simplemente tendrás que cambiar la URL base.
 
 === Parte 2: Selenium WebDriver y Jenkins
 
-****
-En desarrollo de aquí en adelante...
-****
+WebDriver permite ejecutar los tests de Selenium como tests de JUnit, permitiendo así su ejecución en Eclipse y Jenkins. 
 
 ==== Exportar a JUnit
 
-==== Ejecutar en Eclipse con Firefox y Chrome
+Exporta a formato JUnit los tests grabados con Selenium IDE. Tendrás que hacerlo uno por uno, ya que por ahora Selenium IDE no permite exportarlos todos a la vez. 
+
+.Exportar test case
+image::selenium-ide-export-test.png[role="thumb", align="center"]
+
+.Exportar formato JUnit
+image::selenium-ide-export-test-junit.png[role="thumb", align="center"]
+
+Guarda los archivos `.java` en una carpeta. A continuación los importaremos en Eclipse.
+
+==== Cross-browser testing con Firefox y Chrome en Eclipse
+
+Partiendo del repositorio https://github.com/ualhmis/seleniumWebDriverJUnit realizar los siguientes pasos:
+
+[IMPORTANT]
+====
+Los test de JUnit exportados por Selenium IDE están en formato JUnit 4. Para evitar más modificaciones de las necesarias, la dependencia en el pom del proyecto está configurada a JUnit 4.
+====
+
+. Un miembro del equipo clona el repositorio (previamente forkeado). Siguiendo el método de trabajo en equipo, el otro miembro forkea el repositorio del compañero y propondrá cambios mediante pull request.
+
+. Cada miembro del equipo crea una carpeta `drivers` en el proyecto en Eclipse. Y añade la carpeta al `.gitginore` para que el contenido no se guarde en el repositorio.
+
+[source]
+..gitignore
+----
+/bin/
+/target/
+/drivers/
+----
+
+
+[WARNING]
+====
+Es importante que los drivers específicos de los navegadores no se guarden en GitHub, ya que son archivos ejecutables (dependencias) que no deben versionarse. Cuando los necesites, tendrás que descargarlos. 
+====
+
+[start=3]
+. En es carpeta descarga los drivers de los navegadores Firefox y Chrome. Para ello: 
+.. Descarga y descomprime Firefox driver (Gecko Driver) de https://github.com/mozilla/geckodriver/releases eligiendo la versión adecuada para tu sistema.
+.. Descarga y descomprime Chrome driver de https://sites.google.com/a/chromium.org/chromedriver/downloads eligiendo la versión del driver correspondiente a la versión de Chrome que tengas instalado en tu sistema.
+.. Con estos dos drivers es suficiente, pero puedes ver como descargar los drivers de otros navegadores aquí: https://www.selenium.dev/documentation/en/webdriver/driver_requirements/[Driver requirements].
+
+[start=4]
+. Crea un nuevo paquete en la carpeta test de nombre `org.ual.hmis.nombreEquipo` (sustituyendo `nombreEquipo` por el nombre de tu equipo). Ahí guarda los archivos `.java` exportados de Selenium IDE. 
+
+. A continuación se indican unas mínimas modificaciones, empezando por: 
+.. Añadir el paquete a cada archivo `.java`
+.. En el método `setUp()`, añade justo al principio las sentencias para configurar la ruta a cada driver:
+
+[source,java]
+----
+  @Before
+  public void setUp() throws Exception {
+
+	System.setProperty("webdriver.gecko.driver", "drivers/geckodriver-v0.24.0-win64/geckodriver.exe"); <1>
+
+	System.setProperty("webdriver.chrome.driver", "drivers/chromedriver_win32/chromedriver.exe"); <2>
+    ...
+  }
+----
+<1> Son rutas relativas en el proyecto, dentro de `drivers`. Usa la rutas adecuada en tu caso.
+<2> Idem 
+
+[start=6]
+. Ejecuta los tests como JUnit Test. Verás que se abre Firefox y ejecuta los test automáticamente. 
+
+. Si un test falla, revisa el código y los pasos incluidos. Puede haber pasos que sobren, o que al exportarlos a JUnit tengas que adaptarlos a Java. Un ejemplo será el código JavaScript que genera un número aleatorio en el email del registro de un nuevo usuario. También los fallos se pueden deber al selector que ha tomado Selenium IDE. El selector identifica el elemento dentro de la página web a partir del DOM. Ve a Selenium IDE y cambia el selector, en la propiedad `target`; es recomendable utilizar la opción que identifica el elemento por `xpath` y el texto que queremos seleccionar. Por ejemplo, en un comando `click`: 
+
+.Cambiar el selector de un elemento de la página
+image::selenium-ide-change-selector-xpath.png[role="thumb", align="center"]
+
+
+[start=8]
+
+. A continuación vamos a probar en otro navegador, haciendo así lo que se denomina https://developer.mozilla.org/en-US/docs/Learn/Tools_and_testing/Cross_browser_testing/Introduction[_cross-browser testing]_. En los archivos `.java` cambia el driver a Chrome:
+
+[source,java]
+----
+  @Before
+  public void setUp() throws Exception {
+      ...
+      // driver = new FirefoxDriver();
+	  driver = new ChromeDriver();
+----
+
+Verás que su 
+
+
+
 
 ==== Configurar un driver _headless_
 
